[package]
name = "miniorm"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.99", features = ["diff"] }

[dependencies]
async-trait = "0.1.82"
quote = "1.0.37"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
syn = { version = "2.0.77", features = ["extra-traits"] }
tokio = { version = "1.40.0", features = ["full"] }
