[package]
name = "webb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "time", "uuid"] }
time = "0.3.36"
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = "0.7.11"
uuid = "1.10.0"
