[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
prost = "0.13.2"
prost-types = "0.13.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
